--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Online HTML Editor</title>
+    <title>Ishwari Resume</title>
 </head>
 <body>
-    <h1>Online HTML Editor</h1>
-    <p>Hello World</p>
+    <div id="header"><link rel="stylesheet" href="indesCss.css"></div>
+<div class="left">
+  
+</div>
+
+<div class="stuff">
+  <br><br>
+  <h1>Resume</h1>
+  <h2>Ishwari Kakade
+
+  </h2>
+  <hr />
+  <br>
+  <div class="right2">
+    <img src="me.jpg" alt="Ishwari's Photo" class="profile-pic">
+  </div>
+  <p class="head">Interests</p>
+  <ul>
+    <li>Traveling</li>
+    <li>Photography</li>
+    <li>Design</li>
+    <li>Programming</li>
+    <li>Computer Science</li>
+  </ul>
+  <p class="head">Skills</p>
+  <ul>
+    <li>Web Design with HTML & CSS</li>
+  </ul>
+  <p class="head">Education</p>
+  <ul>
+    <a href="https://www.sandipanischool.org/">
+      <li>Sandipani School</li>
+    </a>
+    <!--Link-->
+   
+    
+  </ul>
+  <p class="head">Experience</p>
+  <ul>
+    <li>Played District Level Bandiminton Tournament</li>
+    <li>Red house Captain</li>
+  </ul>
+  <p class="head">Extracurriculars</p>
+  <ul>
+    <li>Arts Club</li>
+    <li>Green Club</li>
+    <li>Sports Club</li>
+  </ul>
+</div>
+<div class="right"></div>
+<div id="footer">
+  <h2 id="name">Email</h2></div>
+   
 </body>
 </html>
