--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,7 +18,7 @@
   <hr />
   <br>
   <div class="right2">
-    <img src="me.jpg" alt="Ishwari's Photo" class="profile-pic">
+    <img src="1191529f-98fa-4b7c-8698-78e66459162e.jpg" alt="Ishwari's Photo" class="profile-pic">
   </div>
   <p class="head">Interests</p>
   <ul>
